/*
 * Copyright 2019, Allied Telesis Labs New Zealand, Ltd
 */

package cmsg_pssd;

service remote_sync
{
}
